Added automatic testing browser

--- a/test/browser/browser.html
+++ b/test/browser/browser.html
@@ -1,10 +1,10 @@
 <html>
 	<head>
-	  <link href="https://cdn.rawgit.com/mochajs/mocha/2.1.0/mocha.css" rel="stylesheet" />
+	  <link href="http://cdn.rawgit.com/mochajs/mocha/2.1.0/mocha.css" rel="stylesheet" />
 	</head>
 	<body>
 		<div id="mocha"></div>
-	    <script src="https://cdn.rawgit.com/mochajs/mocha/2.1.0/mocha.js"></script>
+	    <script src="http://cdn.rawgit.com/mochajs/mocha/2.1.0/mocha.js"></script>
 		<script src="../../browser/di.min.js"></script>
 		<script>mocha.setup('bdd')</script>
 		<script src="di.js"></script>
