--- a/test/browser/browser.html
+++ b/test/browser/browser.html
@@ -5,7 +5,7 @@
 	<body>
 		<div id="mocha"></div>
 
-	    <script src="../../dist/di.js"></script>
+	    <script src="../../dist/di.min.js"></script>
 		<script>
 			if (typeof window.Di === 'undefined') {
 				throw new Error('global not working');
