--- a/test/di.browser.html
+++ b/test/di.browser.html
@@ -5,7 +5,7 @@
 	<body>
 		<div id="mocha"></div>
 
-	    <script src="../../dist/di.min.js"></script>
+	    <script src="../dist/di.min.js"></script>
 		<script>
 			if (typeof window.Di === 'undefined') {
 				throw new Error('global not working');
@@ -20,9 +20,9 @@
 			} catch (e) {}
 			mocha.setup('bdd');
 		</script>
-		<script src="di.js"></script>
+		<script src="di.browser.js"></script>
 		<script>
-			requirejs(["../../dist/di.js"], function(Di) {
+			requirejs(["../dist/di.js"], function(Di) {
 				if (typeof Di === 'undefined') {
 					throw new Error('AMD not working');
 				}
